--- a/android/app/src/main/res/layout/list_subject.xml
+++ b/android/app/src/main/res/layout/list_subject.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="15pt"
     android:id="@+id/layoutSubject">
     <TextView
         android:id="@+id/textView"
+        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
+        android:text="hello"
+        android:textSize="10pt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:textColor="@color/login_input"/>
 </android.support.constraint.ConstraintLayout>
