--- a/android/app/src/main/res/layout/activity_timetable.xml
+++ b/android/app/src/main/res/layout/activity_timetable.xml
@@ -74,7 +74,6 @@
             android:layout_height="match_parent"
             android:text="넘어가기"
             android:textColor="@color/white"
-            android:backgroundTint="@color/login_button"
-            />
+            android:backgroundTint="@color/login_button"/>
     </LinearLayout>
 </LinearLayout>
