--- a/android/app/src/main/res/layout/activity_camera.xml
+++ b/android/app/src/main/res/layout/activity_camera.xml
@@ -12,8 +12,8 @@
 
     <Button
         android:id="@+id/buttonCapture"
-        android:layout_gravity="bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Capture"/>
+        android:layout_gravity="bottom|right"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
+        android:text="●"/>
 </FrameLayout>
